# Cpp_repo

./: .clangd  .gitignore  PPP_support.h  flake.nix
Arrays_Pointers_References/: drill.cpp  drill2.cpp  exercise10.cpp  exercise3.cpp  exercise4.cpp  palindromes  palindromes.cpp  sizeof.cpp  span  span.cpp
Essential_Operations/: #test.cpp#  drill.cpp  test  test.cpp  vector.cpp
Graphical_interfaces/: drawing_lines.cpp
Graphics_Classes/: exercise1.cpp  exercise2.cpp  exercise8.cpp  lines.cpp
Graphing_functions_and_data/: approximation.cpp  drill.cpp  drill2.cpp  exercise1.cpp  simple_functions.cpp  visualize_data.cpp
Templates_and_Exception/: drill  drill.cpp  exercise10.cpp  exercise17.cpp  exercise2.cpp  vector.cpp
c_learning/: c_basic  c_basic.c  static  static.c
class_design/: drill.cpp  exercise11.cpp  exercise2.cpp
classes/: book.cpp  date_class.cpp  date_struct.cpp  enum_class  enum_class.cpp  exercise13.cpp
complete_a_program/: calculator_token  calculator_token_2.cpp  calculator_token_3.cpp  calculator_token_4.cpp
computation/: calculator.cpp  constant_expression  constant_expression.cpp  dislike_word  dislike_word.cpp  dollar_converter  dollar_converter.cpp  dollar_converter_switch  dollar_converter_switch.cpp  drill  drill.cpp  exercise18  exercise18.cpp  exercise4.cpp  if_statement  if_statement.cpp  iter_for  iter_for.cpp  iter_while  iter_while.cpp  square_function  square_function.cpp  traverse_vector  traverse_vector.cpp  vector_length.cpp
display_model/: .clangd  CMakeLists.txt  axis.cpp  drill.cpp  exercise10.cpp  exercise2.cpp  exercise7.cpp  first_example.cpp
errors/: are_exception  area_example  area_example.cpp  area_exception  area_exception.cpp  drill.cpp  exercise10  exercise10.cpp  exercise12  exercise12.cpp  exercise8  exercise8.cpp  input_error  input_error.cpp  out_of_range  out_of_range.cpp  random  random.cpp  uncaught_error  uncaught_error.cpp
functions/: declare  declare.cpp  drill  drill.cpp  exercise11.cpp  exercise2.cpp  foo.cpp  use  use.cpp
hello_world/: hello_world  hello_world.cpp
input_and_output/: Test_output  Test_output.cpp  effective_single_value.cpp  exercise14.cpp  exercise15.cpp  exercise2.cpp  handle_error.cpp  int  int.cpp  multi_input.cpp  open_file  open_file.cpp  read_temperature  read_temperature.cpp  read_white_spaced_number.cpp  single_value  single_value.cpp  structured_read.cpp  structured_temp.txt
objects_types_values/: auto  auto.cpp  conversion  conversion.cpp  error_find  error_find.cpp  floating_point  floating_point.cpp  input_and_type  input_and_type.cpp  narrowing  narrowing.cpp  practice1  practice1.cpp  read_string_write  read_string_write.cpp  repeat_checker  repeat_checker.cpp  string_comparison  string_comparison.cpp
vector/: #drill2.cpp#  #link.cpp#  #stack.cpp#  .#stack.cpp  destructor.cpp  drill.cpp  drill2  drill2.cpp  first  first.cpp  link.cpp  overflow  (+3 more)
(+6 files in other folders)
